This commit adds README and images.
Co-authored-by: Tyler Sinks <tyler.sinks@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>Cupcake Shop</title>
+  <title>Bad Cupcake Shop</title>
 </head>
 <body>
-  
+  <h1>Welcome to Terrible Cupcake Shop</h1>
 </body>
 </html>
