Commit adds an image to ppage and a couple of headers and a paragraph.
Co-authored-by: Tyler Sinks <tyler.sinks@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
   <h1>Welcome to Terrible Cupcake Shop</h1>
+  <img src="img/cupcake2.jpg" alt="Yummy Cupcake" style="width:280px;height:400px;">
+  <h2>The only cupcakes we want to eat.</h2>
+  <p>There are so many websites that are available for making cupcakes you can find a few listed below.</p>
 </body>
 </html>
