Commit adds links and images to a list.
Co-authored-by: Tyler Sinks <tyler.sinks@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
   <img src="img/cupcake2.jpg" alt="Yummy Cupcake" style="width:280px;height:400px;">
   <h2>The only cupcakes we want to eat.</h2>
   <p>There are so many websites that are available for making cupcakes you can find a few listed below.</p>
+  <ol>
+    <li><a href="https://www.joelix.com/the-worst-cupcakes-ever/">The Worst Cupcakes Ever</a></li>
+    <img src="img/cupcake1.jpg" alt="Yummy Cupcake" style="width:280px;height:400px;">
+    <li><a href="https://www.tripadvisor.com/ShowUserReviews-g55711-d4838322-r448586433-Fluellen_Cupcakes-Dallas_Texas.html">Fluellen Cupcakes</a></li>
+    <img src="img/cupcake3.jpg" alt="Yummy Cupcake" style="width:280px;height:400px;">
+    <li><a href="https://www.therecipe.com/flavors-cupcakes-ranked-best/">Sweet Victory: 25 Flavors Of Cupcakes, Ranked From Worst To Best</a></li>
+  </ol>
 </body>
 </html>
