--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>Bad Cupcake Shop</title>
 </head>
 <body>
-  <h1>Welcome to Terrible Cupcake Shop</h1>
-  <img src="img/cupcake2.jpg" alt="Yummy Cupcake" style="width:280px;height:400px;">
-  <h2>The only cupcakes we want to eat.</h2>
+  <h1 class="flashy">Welcome to Terrible Cupcake Shop</h1>
+  <img class="best" src="img/cupcake2.jpg" alt="Yummy Cupcake" style="width:280px;height:400px;">
+  <h2 class="flashy">The only cupcakes we want to eat.</h2>
   <p>There are so many websites that are available for making cupcakes you can find a few listed below.</p>
   <ol>
-    <li><a href="https://www.joelix.com/the-worst-cupcakes-ever/">The Worst Cupcakes Ever</a></li>
+    <li class="flashy"><a href="https://www.joelix.com/the-worst-cupcakes-ever/">The Worst Cupcakes Ever</a></li>
     <img src="img/cupcake1.jpg" alt="Yummy Cupcake" style="width:280px;height:400px;">
     <li><a href="https://www.tripadvisor.com/ShowUserReviews-g55711-d4838322-r448586433-Fluellen_Cupcakes-Dallas_Texas.html">Fluellen Cupcakes</a></li>
     <img src="img/cupcake3.jpg" alt="Yummy Cupcake" style="width:280px;height:400px;">
